# tide_template

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: main.yml
src/: core.rs  main.rs
static/: main.css
templates/: index.html
