[package]
name = "tide_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpassword = "6.0.1"
serde = "1.0.136"
serde_json = "1.0.59"
tera = "1.15.0"
tide = "0.16.0"
tide-tera = "0.2.2"

[dependencies.async-std]
version = "1.6.0"
features = ["attributes"]